ecmascript/parser/tests/test262-error-references/fail/3e6146fd7daff493.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/3e6146fd7daff493.js:1:8
  |
1 | for(;;)
  |        ^

